# lavender-ledger

./: .env.example  .gitignore  CLAUDE.md  CONSOLIDATED_STATEMENTS_FIX.md  Dockerfile  LICENSE  README.md  TRANSACTION_MEMORY.template.md  config.dev.yaml  config.example.yaml  docker-compose.yml  pyproject.toml
migrations/: 001_add_ingestion_log.sql  002_enhance_categorization_rules.sql  004_support_consolidated_statements.sql  README.md
scripts/: apply_categorizations.py  archive_pdf.py  clean_fresh_install.sh  init_db.py  insert_statement.py  migrate.py  review_flagged.py  run_dashboard.py
skills/batch_ingestion/: SKILL.md
skills/categorization/: SKILL.md
skills/csv_parsing/: SKILL.md
skills/ingestion/: SKILL.md
skills/memory/: SKILL.md
skills/pdf_parsing/: SKILL.md
skills/review_flagged/: SKILL.md
src/: __init__.py  config.py
src/dashboard/: __init__.py  app.py  queries.py  terminal.py
src/dashboard/templates/: base.html  categories.html  index.html  terminal.html  transactions.html  trends.html
src/dashboard/templates/static/css/: style.css
src/database/: __init__.py  models.py  schema.sql
tests/: __init__.py  conftest.py  test_app_integration.py  test_dashboard_routes.py  test_database_models.py  test_insert_statement_stdin.py  test_queries.py  test_terminal.py
